# tryultralytics

./: .gitignore  01_train_text.ipynb  README.md  clean.py  detect.py  jsontoyolo.py  jsontoyolo_simple.py  mydataset.yaml  pdm.toml  pyproject.toml  toonnx.py  torchv.py  train.py
